apps/architecture/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: architecture
  namespace: halo
spec:
  selector:
    app: architecture
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
